octopus/client/src/pages/product/Product.module.scss
.main {
  & > * {
    padding: 1rem 1.5rem;
  }
}

.heroImageWrapper {
  text-align: center;
  background: linear-gradient(
    to bottom,
    var(--dark-blue-background) 90%,
    var(--lighter-blue-background) 90%
  );

  .heroImage {
    width: 75vw;
    max-width: 600px;
  }
}

.productName {
  margin: 0;
}

.subtitle {
  color: var(--dark-blue-text);
}

.priceSection {
  background-color: var(--dark-blue-background);
  display: grid;
  grid-template-areas:
    "price quantity"
    "addBtn addBtn";
  justify-content: space-between;
  align-items: center;
  justify-items: stretch;
  grid-gap: 1rem;
}

.price {
  grid-area: price;
  font-size: 3rem;
  font-weight: bold;
  .pence {
    vertical-align: super;
    font-size: 1.5rem;
  }
}

.specsSection {
  background-color: var(--dark-blue-background);

  .specs {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    justify-items: stretch;

    & > dd,
    & > dt {
      border-bottom: 1px solid var(--lighter-blue-background);
      margin: 0;
      padding: 0.5rem 0;
    }
  }
}

